# Klampt-examples

./: .gitignore  README.md  postBuild  requirements.txt
Cpp/: CMakeLists.txt  cartpole.cpp  contactplan.cpp  dynamicplandemo.cpp  geometrytest.cpp  multicontactplan.cpp  plandemo.cpp  plangui.cpp  realtimeplanning.cpp  safeserialclient.cpp  stabilitytest.cpp  tsdfreconstruction.cpp  usertrials.cpp  usertrials_serial.cpp
Cpp/MotorCalibrateBaxter/: baxter-ref.path  baxter-sensed.path
Cpp/testing/: .gitignore  CMakeLists.txt  geometrystats.cpp  geometrytest.cpp  heightmaptest.cpp  primitivetest.cpp  worldiotest.cpp
Jupyter/: BasicKlamptDemo.ipynb  Debugging.ipynb  HTMLOutput.ipynb  PlanAndSim.ipynb  SensorTest.ipynb  TeleoperationDemo.ipynb
Python/demos/: gl_vis.py  gl_vis_widgets.py  kbdrive.py  resource_demo.py  robotiq_test.py  sensor_test.py  vis_template.py
Python/testing/: geometrytest.py  motionplannertest.py  primitivetest.py  rostest_sub.py  subrobottest.py
Python/utils/: extrinsic_calibrate.py
Python2/demos/: mouse_capture.py  path_test.py  planning_test.py  robotiq.py  ros_point_cloud_show.py  vis_template.py
Python2/testing/: cartesiantest.py  converttest.py  geometrytest.py  motionplannertest.py  multiwindowtest.py  rostest_pub.py  urlloadtest.py
Python2/utils/: contact_log_to_stances.py  wrench_log_to_cop.py
Python3/: Recipes.ipynb
Python3/demos/: exercise_joints.py  gl_vis.py  gl_vis_widgets.py  io_povray.py  kbdrive.py  mouse_capture.py  overlay.py  path_test.py  planning_test.py  pose.py  resource_demo.py  robotiq.py  robotiq.xml  robotiq_test.py  ros_point_cloud_show.py  sensor_test.py  sphero.py  trajectory_test.py  vis_template.py  workspace_test.py
Python3/kinetrajopt/: README.md  test_mobile.py  test_ur5_block.py
Python3/testing/: autodifftest.py  cameratest.py  cartesiantest.py  cartesiantest_complex.py  colormaptest.py  controllertest.py  converttest.py  geometrytest.py  manyworldtest.py  motionplannertest.py  multiwindowtest.py  open3dtest.py  optimizetest.py  pytorch_autodifftest.py  robottest.py  rostest_pub.py  rostest_sub.py  sensor_matplotlib.py  settletest.py  stabilitytest.py  subrobottest.py  urlloadtest.py  vistest.py
data/: athlete_fractal_2.xml  athlete_plane.xml  baxter_apc.xml  grasping_simulation.xml  mirobot_6blocks.xml  tx90cups_simple.xml
data/arm_robots/: kinova_gen3_7dof.urdf  mirobot.urdf  tx90ball.rob  tx90l.rob  ur5.rob
data/compound_robots/: baxter_with_parallel_gripper_col.rob  kinova_with_robotiq_85.urdf  puma760_2.rob  puma760pr2.rob  tx90ball_pair.rob  tx90pr2.rob  tx90robotiq.rob  ur5_with_robotiq85.rob  ur5_with_robotiqepick.rob  ur5e_hires_with_robotiq85.rob
data/gripper_robots/: leaphand.urdf  pr2gripper.rob  robotiq_85.rob  (+3 more)
robotinfo/: README.md  kinova_gen3_real.json  kinova_with_robotiq85_real.json  mirobot_real.json  mirobot_sim.json  tx90pr2_sim.json  ur5_real.json  ur5_sim.json  ur5_with_robotiq85_real.json  ur5_with_robotiq85_sim.json
(+375 files in other folders)
